# r2d2-discord-bot

./: .gitignore  README.md  bad_language.txt  example.draw  keep_alive.py  main.py  myfile.txt  pyproject.toml  report.py  requirements.txt  tester.py  tkn.py
templates/: index.html
