[tool.poetry]
name = "repl_python3_SmugFearfulGlitch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
wikipedia = "^1.4.0"
pydogapi = "^0.1"
twilio = "^6.48.0"
purgomalum = "^1.0.3"
discord = "^1.0.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
